Fix footer F: T: M: spacing; fix responsive two columns for 568px < 767px (move heading on top of columns);

--- a/sass/sl-components/_footer.scss
+++ b/sass/sl-components/_footer.scss
@@ -50,17 +50,7 @@
     .block p
     {
         margin: 0;
-        .footer-content
-        {
-            padding-left: 16px;
-            padding-left: 1rem;
-        }
-    }
-    .block p:last-child { // align office@balloon-rgw.at with above content
-        .footer-content {
-            padding-left: 12px;
-            padding-left: .75rem;
-        }
+        padding-left: 2px;
     }
     .block:first-child
     {
