--- a/sass/sl-components/_front.scss
+++ b/sass/sl-components/_front.scss
@@ -14,7 +14,7 @@
     padding-top: 16px;
     padding-top: 1rem;
     @include clearfix();
-    @include breakpoint($tablet) {
+    @include breakpoint($desktop) {
         >.view-header {
             float: left;
             width: 25%;
